# daily-brief

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: 2026-07-20-quality-pipeline-design.md  2026-07-20-quality-pipeline-implementation-plan.md
docs/superpowers/plans/: 2026-07-08-hn-daily-brief-implementation.md  2026-07-12-network-resilience-implementation.md
docs/superpowers/specs/: 2026-07-08-hn-daily-brief-design.md  2026-07-12-network-resilience-design.md
src/daily_brief/: article_fetcher.py  cli.py  config.py  history.py  hn_client.py  keywords.py  models.py  render.py  scoring.py  selection.py  summarizer.py  time_window.py  topic_classifier.py
tests/: test_article_fetcher.py  test_cli.py  test_history.py  test_hn_client.py  test_keywords.py  test_render.py  test_scoring_selection.py  test_summarizer.py  test_time_window.py  test_topic_classifier.py
