[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-brief"
version = "0.1.0"
description = "Personal daily information brief generator"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
daily-brief = "daily_brief.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
